services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mensajesas-service
  namespace: mensajesas
spec:
  selector:
    app: mensajesas
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  namespace: mensajesas
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: mensajesas
spec:
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sentimentalist-service
  namespace: mensajesas
spec:
  selector:
    app: sentimentalist
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mensajesas
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
