ingress_kubernetes.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mensajesas-ingress
  namespace: mensajesas
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
            service:
              name: mensajesas
              port:
                number: 3000
